--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,7 +1,8 @@
 .container{
   display: flex;
   flex-direction: row;
-  background-color: rgb(207, 10, 10);
+  background-color: rgb(15, 15, 15);
+ color: #000000;
 }
 img {
   width: 220px;
@@ -12,7 +13,7 @@ img {
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: #f0f0f0;
+    background-color: #000000;
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -24,8 +25,13 @@ ul {
 
 }
 .lista{
-    background-color: rgb(196, 196, 196);
+    background-color: rgb(2, 2, 2);
+    color: antiquewhite;
     margin: 5px;
     padding: 5px;
     border-radius: 5px;
+}
+.borda{
+  border-radius: 10px;
+  background-color: rgb(19, 18, 18);
 }
